Fixing some layout bugs

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,10 +33,17 @@
   }
   .ui.container {
     width: 100%;
+    max-width: 1280px;
   }
 
   .ui.grid.dashboard {
-    margin-left: 10%;
+    margin: 0 10%;
+    max-width: 1280px;
+  }
+
+  .ui.vertical.segment {
+    margin: 0 10%;
+    max-width: 1280px;
   }
 }
 
